--- a/src/components/TagSelector/TagSelector.module.scss
+++ b/src/components/TagSelector/TagSelector.module.scss
@@ -20,6 +20,10 @@
     @media (max-width: 768px) {
         gap: 8px;
     }
+    @media (max-width: 480px) {
+        flex-wrap: wrap;
+    }
+
     @media (max-width: 320px) {
         gap: 8px;
     }
