--- a/src/ui-kit/MainButton/MainButton.module.scss
+++ b/src/ui-kit/MainButton/MainButton.module.scss
@@ -58,6 +58,7 @@
             height: 56px;
             font-size: 16px;
             line-height: 24px;
+            margin-top: 30px;
         }
 
         &:not(:disabled) {
