--- a/src/components/LoanCalculator/LoanCalculator.module.scss
+++ b/src/components/LoanCalculator/LoanCalculator.module.scss
@@ -20,7 +20,7 @@
         padding: 32px;
     }
 
-    @media (max-width: 320px) {
+    @media (max-width: 600px) {
         position: relative;
         border-radius: 0px;
         max-width: 100%;
@@ -30,6 +30,17 @@
         padding: 16px;
         overflow-y: auto;
     }
+
+    // @media (max-width: 320px) {
+    //     position: relative;
+    //     border-radius: 0px;
+    //     max-width: 100%;
+    //     justify-content: flex-start;
+    //     height: 100vh;
+    //     width: 100%;
+    //     padding: 16px;
+    //     overflow-y: auto;
+    // }
 }
 .calculatorHeader {
     display: flex;
